--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_API_URL = "https://apihrms.assaycr.in/v1"
 # NEXT_PUBLIC_JSON_SERVER_API_URL = "http://localhost:3002"
-NEXT_PUBLIC_JSON_SERVER_API_URL = "https://json-mock-server-phi.vercel.app/"
+NEXT_PUBLIC_JSON_SERVER_API_URL = "https://json-mock-server-phi.vercel.app"
